@@ -4,6 +4,9 @@ Changelog
 3.4.2 (unreleased)
 ------------------
 
+- Fixed mail download for mails with already CRLF.
+  [phgross]
+
 - Mail Download: Convert LF to CRLF, to avoid displaing problems in MS Outlook.
   [phgross]
 
